[tool.poetry]
name = "my-tests-with-selene"
version = "0.1.0"
description = ""
authors = ["cshimm <cameronjshimmin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selene = {version = "^2.0.0rc9", allow-prereleases = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
